Changing of brand name to ProjeX and change of Logo

--- a/templates/_head.html
+++ b/templates/_head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8" />
-<title>{% block title %}Campus Event & Task Scheduler{% endblock %}</title>
+<title>{% block title %}ProjeX{% endblock %}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
