--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,14 @@
-{% extends 'base.html' %} {% block title %}About - Campus Scheduler{% endblock %}
+{% extends 'base.html' %} {% block title %}About - ProjeX{% endblock %}
 {% block content %}
     <section class="about-container">
-        <h1>About Campus Event & Task Scheduler</h1>
+        <h1>About ProjeX</h1>
         <p>
-            Welcome to Campus Event & Task Scheduler, your favourite platform for organizing campus events and managing
+            Welcome to ProjeX, your favourite platform for organizing meetings and managing
             tasks
         </p>
 
         <h2>Our Mission</h2>
-        <p>We look forward to being the best campus scheduler!</p>
+        <p>We look forward to being the best Project Management System!</p>
 
         <h2>Meet the Team</h2>
         <div class="team-section">
