--- a/templates/email/confirm_email.html
+++ b/templates/email/confirm_email.html
@@ -77,7 +77,7 @@
                 <a href="{{ confirm_link }}" class="button">Confirm Email</a>
             </p>
             <p>If you didn't create an account, ignore this email.</p>
-            <p>Thank you,<br />Campus Scheduler</p>
+            <p>Thank you,<br />ProjeX</p>
             <div class="footer">
                 <p>This email has been generated automatically. Please do not reply.</p>
             </div>
