--- a/templates/email/reset_password_email.html
+++ b/templates/email/reset_password_email.html
@@ -77,7 +77,7 @@
                 <a href="{{ reset_link }}" class="button">Reset Your Password</a>
             </p>
             <p>If you did not request a password reset, please ignore this email.</p>
-            <p>Thank you,<br />Campus Scheduler</p>
+            <p>Thank you,<br />ProjeX</p>
             <div class="footer">
                 <p>This email has been generated automatically. Please do not reply.</p>
             </div>
