--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Privacy Policy - Campus Scheduler{% endblock %}
+{% block title %}Privacy Policy - ProjeX{% endblock %}
 
 {% block content %}
     <section class="privacy-container">
