Added webp version of the logo and fixed dimension issues

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
                 <div class="nav-container">
                     <div class="nav-logo">
                         <a href="{{ url_for('index') }}">
-                            <img src="{{ url_for('static', filename='images/Logo.png') }}" alt="Logo" style="height: 24px; vertical-align: middle; margin-right: 8px;">
+                            <img src="{{ url_for('static', filename='images/logo.webp') }}" alt="Logo" width="32" height="24" style="vertical-align: middle; margin-right: 8px;">
                             ProjeX
                         </a>    
                     </div>
